@@ -7,7 +7,7 @@ _movie_thumbnailer()
     _init_completion || return
 
     if [ "${cur:0:2}" == "--" ] ;then
-        COMPREPLY=( $( compgen -W "--shadow --transparent" -- "$cur" ) )
+        COMPREPLY=( $( compgen -W "--shadow --transparent --cover" -- "$cur" ) )
     else
         case "$prev" in 
         "-f") fclist=$(fc-list :fontformat=TrueType file | cut -d : -f1)
