@@ -1,7 +1,7 @@
 .\" Manpage for mtn.
 .\" Contact wahibre@gmx.com to correct errors or typos.
 
-.TH man 1 "August 2019" "1.3" "mtn man page"
+.TH man 1 "April 2020" "1.4" "mtn man page"
 .SH NAME
 mtn \- generate thumbnail grid of a movie file(s)
 .SH SYNOPSIS
@@ -63,6 +63,9 @@ is omitted.
 .IP --transparent
 set background color (-k) to transparent; works with PNG image only
 
+.IP --cover[=COVER_SUFFIX]
+extract album art if exists to the file with suffix COVER_SUFFIX, default _cover.jpg
+
 .IP Filename
 name of the movie file or directory containing movie files
 
@@ -102,5 +105,5 @@ wahibre (wahibre@gmx.com)
 
 
 .SH COPYRIGHT
-Copyright © 2019 Free Software Foundation, Inc.  License GPLv2+: GNU GPL version 2 or later <http://gnu.org/licenses/gpl.html>.
+Copyright © 2020 Free Software Foundation, Inc.  License GPLv2+: GNU GPL version 2 or later <http://gnu.org/licenses/gpl.html>.
 This is free software: you are free to change and redistribute it.  There is NO WARRANTY, to the extent permitted by law.
