@@ -1,4 +1,5 @@
 version 3.4.0   2020/04/14
+- extract album art (--cover)
 - thumbnail autorotation
 - bash and zsh completion
 
